# xsyncfar

./: .gitignore  LICENSE  README.md  copilot.instructions.md  pyproject.toml
.github/workflows/: publish.yml
tests/: test_cli.py  test_sync.py
xsyncfar/: __init__.py  cli.py  sync.py
