[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "xsyncfar"
version = "0.1.0"
description = "xsyncfar"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [{ name = "xsyncfar contributors" }]
dependencies = [
  "pyyaml",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[project.scripts]
xsyncfar = "xsyncfar.cli:main"

[tool.setuptools]
packages = ["xsyncfar"]
