[build-system]
requires = ["setuptools>=42", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "xsyncfar"
dynamic = ["version"]
description = "xsyncfar"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [{ name = "xsyncfar contributors" }]
dependencies = [
  "pyyaml",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[tool.setuptools_scm]
# Derives version from git tags (e.g. v0.2.0 → 0.2.0).
# Commits after a tag produce a dev suffix: 0.2.0.dev3+gabcdef
version_scheme = "post-release"
local_scheme = "no-local-version"

[project.scripts]
xsyncfar = "xsyncfar.cli:main"

[tool.setuptools]
packages = ["xsyncfar"]
